<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgetContainer2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ForgetPassword2">


    <ImageView
        android:id="@+id/forgetImage2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/baseline_lock_reset_24" />

    <EditText
        android:id="@+id/enterNewPass"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:autofillHints="@string/newPass"
        android:hint="@string/prompt_newPass"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"/>

    <EditText
        android:id="@+id/enterConfirmNewPass"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="30dp"
        android:autofillHints="confirmNewPass"
        android:hint="@string/prompt_ConfirmNewPass"
        android:imeActionLabel="@string/prompt_ConfirmNewPass"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true" />


    <Button
        android:id="@+id/backToLoginButton"
        android:layout_width="277dp"
        android:layout_height="66dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:layout_gravity="center"
        android:backgroundTint="#3272D7"
        android:enabled="true"
        android:text="@string/backTo_login"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>