<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPersonalInfo"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/InfolinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="2dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="18.0dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/baseline_person_24" />


        <TextView
            android:layout_width="300dp"
            android:layout_height="18.0dp"
            android:layout_gravity="center"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="15.0sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:inputType="text"
            android:minWidth="25dp"
            android:minHeight="25dp"
            android:text="王大明" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="18.0dp"
            android:layout_gravity="center"
            android:layout_marginTop="20.0dp"
            android:text="@string/house_phone"
            android:textColor="@android:color/black"
            android:textSize="15.0sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editHousePhone"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:inputType="phone"
            android:text="02-12345567" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="18.0dp"
            android:layout_gravity="center"
            android:layout_marginTop="20.0dp"
            android:text="@string/phone_string"
            android:textColor="@android:color/black"
            android:textSize="15.0sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editPhoneNo"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:inputType="phone"
            android:text="0912345678" />

        <TextView
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="18.0dp"
            android:layout_marginTop="20.0dp"
            android:text="@string/companyAddress"
            android:textColor="@android:color/black"
            android:textSize="15.0sp"
            android:textStyle="bold" />

        <EditText
            android:layout_gravity="center"
            android:id="@+id/editCompanyAddress"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:inputType="text"
            android:minWidth="25dp"
            android:minHeight="25dp"
            android:text="台北市瓦斯區瓦斯行瓦斯路一段1號" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="23.0dp"
            android:layout_gravity="center"
            android:layout_marginTop="20.0dp"
            android:text="@string/prompt_email"
            android:textColor="@android:color/black"
            android:textSize="15.0sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:inputType="text"
            android:minWidth="25dp"
            android:minHeight="25dp"
            android:text="gasgas@gmail.com" />


    </LinearLayout>

    <Button
        android:id="@+id/saveInfo_button"
        android:layout_width="94.9dp"
        android:layout_height="56.3dp"
        android:layout_marginStart="275dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="17dp"
        android:backgroundTint="#3272D7"
        android:text="@string/save_string"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InfolinearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>