<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScanOriginalQRCode"
    android:background="@color/white">


    <com.budiyev.android.codescanner.CodeScannerView
        android:id="@+id/originalScanner"
        android:layout_width="match_parent"
        android:layout_height="272dp"
        android:layout_marginBottom="13dp"
        android:backgroundTint="@android:color/white"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/manuallyEnterCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/manuallyEnterCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="7dp"
        android:text="@string/enterCode"
        android:textColor="@android:color/black"
        android:textSize="20.0sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/mannuallyEnterGasCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/originalScanner" />

    <EditText
        android:id="@+id/mannuallyEnterGasCode"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="16dp"
        android:background="#ffeeeeee"
        android:gravity="center"
        android:hint="@string/enterCode"
        app:layout_constraintBottom_toTopOf="@+id/originalScannerString"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manuallyEnterCode" />

    <TextView
        android:id="@+id/originalScannerString"
        android:layout_width="wrap_content"
        android:layout_height="55.1dp"
        android:layout_gravity="center"
        android:layout_marginStart="120dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="8dp"
        android:text="@string/originalString"
        android:textColor="@android:color/black"
        android:textSize="40.0sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/OriginalText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mannuallyEnterGasCode" />

    <TextView
        android:id="@+id/OriginalText"
        android:layout_width="173dp"
        android:layout_height="30dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="1dp"
        android:text="@string/gasIDString"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textSize="20.0sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/confirm_originalScan_button"
        app:layout_constraintEnd_toStartOf="@+id/changableOriginalID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/originalScannerString" />

    <TextView
        android:id="@+id/changableOriginalID"
        android:layout_width="215dp"
        android:layout_height="27dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="100dp"
        android:text="  X X X X X X "
        android:textColor="@android:color/black"
        android:textSize="20.0sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/confirm_originalScan_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/OriginalText"
        app:layout_constraintTop_toBottomOf="@+id/originalScannerString"
        app:layout_constraintVertical_bias="0.354" />

    <Button
        android:id="@+id/confirm_originalScan_button"
        android:layout_width="186.3dp"
        android:layout_height="70.9dp"
        android:layout_gravity="center"
        android:layout_marginStart="112dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#ff5877e4"
        android:text="@string/confirmString"
        android:textColor="#ffffffff"
        android:textSize="20.0sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OriginalText" />


</androidx.constraintlayout.widget.ConstraintLayout>